--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.5.2
+-------------
+
+This is a bug fix release. Some broken menu items are hooked up again.
+The rounding of memory values is fixed. Re-connecting to the VNC display
+is fixed. Blocking of GTK accelerators is re-introduced when VNC is
+active. Scrollbars on the VNC widget are re-introduced if the console
+is close to the maximum local screensize. One new VM wizard is enabled
+per connection. Hardware device details are immediately refreshed after
+changes. Ability to add/remove display and input devices is enabled.
+
 Release 0.5.1
 -------------
 
