Fix label alignment (Dan Hork)

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Further patches have been submitted by:
   Alexander Todorov <atodorov-at-redhat-dot-com>
   Bernhard Kaindl <bk-at-suse-dot-de>
   Eduardo Habkost <ehabkost-at-redhat-dot-com>
+  Dan Hork <dan-at-danny-dot-cz>
 
   <...send a patch & get your name here...>
 
