Pass libvirt connection username through to VNC console instead of hardcoding root (Soren Hansen)

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ Further patches have been submitted by:
   Bernhard Kaindl <bk-at-suse-dot-de>
   Eduardo Habkost <ehabkost-at-redhat-dot-com>
   Dan Hork <dan-at-danny-dot-cz>
+  Soren Hansen <soren-at-ubuntu-dot-com>
 
   <...send a patch & get your name here...>
 
