Added support for libvirt authentication

--- a/README
+++ b/README
@@ -28,14 +28,15 @@ please report any success to the mailing lists
  python  >= 2.4
  pygtk2 >= 1.99.12-6
  gnome-python2-gconf >= 1.99.11-7
- libvirt-python >= 0.2.1
+ libvirt-python >= 0.4.0
  dbus-python >= 0.61
  gnome-keyring >= 0.4.9
  gnome-python-desktop >= 2.15.4
  libxml2-python >= 2.6.23
  vte >= 0.12.2
  gtk-vnc >= 0.0.1
- python-virtinst >= 0.103.0
+ python-virtinst >= 0.300.0
+ PolicyKit >= 0.6
 
 The latter is available from
 
